--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm test -- --watch",
     "test:coverage": "nyc npm test",
-    "lint": "./node_modules/.bin/eslint src/*.js"
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "coveralls": "npm run test:coverage && nyc report --reporter-text-lcov | coveralls"
   },
   "nyc": {
     "reporter": [
@@ -47,6 +48,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.1",
+    "coveralls": "^2.13.1",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
